--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <script src="./main.js" defer></script>
     <title>You don't know js</title>
-    <script src="main.js" defer></script>
 </head>
 <body>
 <h1>Вы не знаете JS (серия книг)</h1>
